@@ -1,3 +1,8 @@
+2010-04-27  Corinna Vinschen  <corinna@vinschen.de>
+
+	* include/regex.h: Include _ansi.h to avoid missing out on preprocessor
+	macros in sys/_types.h.
+
 2010-04-26  Corinna Vinschen  <corinna@vinschen.de>
 
 	* mount.h (fs_info::inited): New inline method.
